@@ -1,7 +1,7 @@
 # Wallet::Admin -- Wallet system administrative interface
 #
 # Written by Russ Allbery <eagle@eyrie.org>
-# Copyright 2016 Russ Allbery <eagle@eyrie.org>
+# Copyright 2016, 2020 Russ Allbery <eagle@eyrie.org>
 # Copyright 2008-2014
 #     The Board of Trustees of the Leland Stanford Junior University
 #
@@ -165,9 +165,11 @@ sub destroy {
 
     # Get an actual DBI handle and use it to delete all tables.
     my $dbh = $self->dbh;
-    my @tables = qw/acl_entries object_history objects acls acl_history
-      acl_schemes enctypes flags keytab_enctypes keytab_sync sync_targets
-      duo types dbix_class_schema_versions/;
+    my @tables = qw(
+      acl_entries duo object_history objects acls acl_history acl_schemes
+      enctypes flags keytab_enctypes keytab_sync sync_targets types
+      dbix_class_schema_versions
+    );
     for my $table (@tables) {
         my $sql = "DROP TABLE IF EXISTS $table";
         $dbh->do ($sql);
